# sqlalchemy_test-10

./: main.py  pyproject.toml  sqlalchemy_test.db
app/db/: base.py  models.py
app/templates/: index.html
